2003-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* FlashPIX: Applied patches from FreeBSD.  Bumped package
	version to version to 1.2.0.8.
	* www/api.html: Updated to reflect GraphicsMagick
	* www/*.html: Updated with format_c_api_docs script.
	* Makefile.am (format_c_api_docs): Add a target to update
	the C API documentation.
	* scripts/format_c_api_docs: Add script which extracts and
	formats the C API documentation into HTML files in the www/api
	subdirectory.

2003-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_VERSION): Update release version ID.
	* magick/version.h (MagickReleaseDate): Update release date.
	* magick/constitute.c (ConstituteImage): Fixed problems with
	reading intensity (gray) pixel arrays.
	* magick/image.c (GrayscalePseudoClassImage): Use
	ScaleQuantumToIndex rather than ScaleQuantumToMap.
	* magick/constitute.c (ConstituteImage): Use ScaleQuantumToIndex
	macro to scale integral intensity values to colormap range.
	* magick/image.h (ScaleQuantumToIndex): New macro to scale a
	quantum to the maximum range of a colormap index.  Useful when
	writing to PsuedoClass grayscale images.
	* VisualMagick/tests/run_constitute.bat: Batch script to run
	constitute tests.
	* VisualMagick/installer/*.iss: Updated for Beta1 release.

2003-04-22  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* utilities/Makefile.am (check) fixed typos (RM -> RMDelegate
	and removed stray "gm"), added -random-threshold, ordered-dither.
	* magick/effect.c: Random-threshold was not treating non-gray
	PseudoColor images correctly.

2003-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/Makefile.am (check): Added code to put logo on demo
	output.
	* magick/command.c (MontageImageCommand): Pass exception rather
	than &image->exception because image may be null, and it is
	pointless to store the exception where it will not be reported to
	the user anyway.
	* utilities/Makefile.am (check): Ported Glenn Randers-Pehrson's