@@ -53,9 +53,22 @@
 </tr>
 </table>
 <p>
+2003-04-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> www/windows.html: Updated for GraphicsMagick 1.0 and to
+        link to ImageMagickObject.html.
+  <LI> www/programming.html: Added link to ImageMagickObject.html.
+  <LI> www/ImageMagickObject.html: New file to provide some
+        documentation for ImageMagickObject.
+
+</UL>
+<p>
 2003-04-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> FlashPIX: Applied patches from FreeBSD.  Bumped package
+        version to version to 1.2.0.8.<BR>
   <LI> www/api.html: Updated to reflect GraphicsMagick
   <LI> www/*.html: Updated with format_c_api_docs script.
   <LI> Makefile.am (format_c_api_docs): Add a target to update
