@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 6.0  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020823;18090800">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20030421;13583000">
+	<META NAME="CHANGED" CONTENT="20030424;10333900">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,  sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
 	<STYLE>
@@ -198,14 +198,15 @@ environments via programming APIs as shown in the following table: </FONT></FONT
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19%>
-				<P ALIGN=LEFT><FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>Windows
-				OLE</FONT></FONT></P>
+				<P ALIGN=LEFT><FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3><A HREF="ImageMagickObject.html">Windows
+				OLE</A></FONT></FONT></P>
 			</TD>
 			<TD WIDTH=81%>
 				<P><FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>The
-				ImageMagickObject OLE control supports access from C++, C#,
-				Visual Basic, Windows Script Host, and ASP, programs under
-				Microsoft Windows.</FONT></FONT></P>
+				<A HREF="ImageMagickObject.html">ImageMagickObject OLE control</A>
+				supports utility-style access via a COM+ object from C++, C#,
+				Visual Basic, Windows Script Host, ASP, and Delphi, programs
+				under Microsoft Windows.</FONT></FONT></P>
 			</TD>
 		</TR>
 		<TR VALIGN=TOP>
