@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 6.0  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;12063600">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20030406;15455200">
+	<META NAME="CHANGED" CONTENT="20030424;14032900">
 	<META NAME="CLASSIFICATION" CONTENT="Describes GraphicsMagick features which are peculiar to Microsoft Windows">
 	<META NAME="DESCRIPTION" CONTENT="Describes how to install GraphicsMagick for Windows.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, WebMagick, Web Magic, visualization, image processing, software development, image, software, Magick++">
@@ -37,24 +37,25 @@
 		<COL WIDTH=48*>
 		<TR>
 			<TD WIDTH=81%>
-				<P ALIGN=LEFT>[<A HREF="../index.html">Home</A>] [<A HREF="mission.html">Mission Statement</A>] [<A HREF="development.html">Development Process</A>]
-				[<A HREF="download.html">Download</A>] [<A HREF="install.html">Installation</A>]
-				[<A HREF="cvs.html">CVS</A>] [<A HREF="http://sourceforge.net/mail/?group_id=73485">Mailing
+				<P CLASS="western" ALIGN=LEFT>[<A HREF="../index.html">Home</A>]
+				[<A HREF="mission.html">Mission Statement</A>] [<A HREF="development.html">Development
+				Process</A>] [<A HREF="download.html">Download</A>]
+				[<A HREF="install.html">Installation</A>] [<A HREF="cvs.html">CVS</A>]
+				[<A HREF="http://sourceforge.net/mail/?group_id=73485">Mailing
 				Lists</A>] [<A HREF="FAQ.html">FAQ</A>] [<A HREF="formats.html">Formats</A>]
 				[<A HREF="NEWS.html">News</A> ] [<A HREF="Changelog.html">ChangeLog</A>]
 				[<A HREF="http://sourceforge.net/projects/graphicsmagick/">Report
-				Bugs</A>] [<A HREF="utilities.html">Utilities</A>]
-				[<A HREF="programming.html">Programming</A>] [<A HREF="books.html">Books</A>]
-				[<A HREF="links.html">Links</A>]</P>
+				Bugs</A>] [<A HREF="utilities.html">Utilities</A>] [<A HREF="programming.html">Programming</A>]
+				[<A HREF="books.html">Books</A>] [<A HREF="links.html">Links</A>]</P>
 			</TD>
 			<TD ROWSPAN=2 WIDTH=19%>
-				<P ALIGN=CENTER><IMG SRC="../images/magick_small.png" NAME="Graphic2" ALIGN=BOTTOM WIDTH=114 HEIGHT=118 BORDER=0></P>
+				<P CLASS="western" ALIGN=CENTER><IMG SRC="../images/magick_small.png" NAME="Graphic2" ALIGN=BOTTOM WIDTH=114 HEIGHT=118 BORDER=0></P>
 			</TD>
 		</TR>
 		<TR>
 			<TD WIDTH=81%>
 				<DIV ALIGN=CENTER>
-					<P><I>Search GraphicsMagick site <INPUT TYPE=TEXT NAME="q" SIZE=25 MAXLENGTH=255>
+					<P CLASS="western"><I>Search GraphicsMagick site <INPUT TYPE=TEXT NAME="q" SIZE=25 MAXLENGTH=255>
 					<INPUT TYPE=SUBMIT NAME="sa" VALUE="Search"> </I>
 					</P>
 				</DIV>
@@ -62,15 +63,14 @@
 		</TR>
 	</TABLE>
 </FORM>
-<P CLASS="western"> 
-</P>
 <BLOCKQUOTE CLASS="western"><I>This page provides information
 specific to GraphicsMagick installed via a &quot;setup.exe&quot;
 style installation wizard under Microsoft Windows. It applies only to
 the pre-built &quot;binaries&quot; package, and not to versions
 compiled from source code. If you would like to install
 GraphicsMagick from source code, then please refer to the
-<A HREF="install.html">GraphicsMagick installation guide</A> . </I>
+<A HREF="INSTALL-windows.html">GraphicsMagick installation guide</A>
+. </I>
 </BLOCKQUOTE>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>
 	<COL WIDTH=256*>
@@ -88,26 +88,43 @@ installation of GraphicsMagick with a newer version, then it may be
 wise to uninstall the existing GraphicsMagick (see uninstall
 procedure) prior to installing the newer version.<BR><BR>While it is
 not a requirement, it is strongly recommended that the <A HREF="http://www.cs.wisc.edu/~ghost/">Ghostscript</A>
-package be installed. GraphicsMagick uses Ghostscript to render
-Postscript and PDF files, as well as formats where a translator to
-Postscript is available. GraphicsMagick will also use the fonts
-delivered with Ghostscript to support the standard set of Postscript
-fonts. <BR><BR>The installation package includes the GraphicsMagick
-Perl extension ( <A HREF="perl.html">PerlMagick</A>) as an
-installation option. If you would like to use this extension, then
-you must install <A HREF="http://www.activestate.com/Products/ActivePerl/Download.html">ActiveState
+package (version 7.05 preferred) be installed. GraphicsMagick uses
+Ghostscript to render Postscript and PDF files, as well as formats
+where a translator to Postscript is available. GraphicsMagick will
+also use the fonts delivered with Ghostscript to support the standard
+set of Postscript fonts. <BR><BR>The installation package includes
+the GraphicsMagick Perl extension ( <A HREF="perl.html">PerlMagick</A>)
+as an installation option. If you would like to use this extension,
+then you must install <A HREF="http://www.activestate.com/Products/ActivePerl/Download.html">ActiveState
 ActivePerl</A> prior to commencing with installation of
 GraphicsMagick. 
 </P>
 <H4 CLASS="western">Retrieve Install Package</H4>
 <P CLASS="western">Retrieve the GraphicsMagick Windows binary install
-package from a one of the ftp sites listed at the <A HREF="archives.html">GraphicsMagick
-Download Sites</A> page. The file will be named similar to
-GraphicsMagick-i686-pc-windows.exe (QuantumDepth=16 version) or
-GraphicsMagick-i686-Q8-windows.exe (QuantumDepth=8 version),and
-should be found in the 'binaries' subdirectory of the ftp site. Note
-that the QuantumDepth=8 version consumes much less memory and CPU
-than the QuantumDepth=16 version, but provides less color resolution.</P>
+package from a one of the ftp sites listed at the <A HREF="download.html">GraphicsMagick
+Download Sites</A> page. The available install packages are as
+follows</P>
+<P CLASS="western">Windows Dynamic-Multithread (DLL-based) install
+package with utilities, PerlMagick, API headers, DLLs, link
+libraries, and web pages.  NOTE: the <A HREF="ImageMagickObject.html">ImageMagickObject</A>
+COM object is included in the -utils package, *not* this package.</P>
+<PRE>    GraphicsMagick-1.0-Q8-windows.exe
+    GraphicsMagick-1.0-Q16-windows.exe
+</PRE><P CLASS="western">
+  Windows Static-Multithread package including the utilities (gm.exe,
+gmdisplay.exe, and MagickCMD.exe), the <A HREF="ImageMagickObject.html">ImageMagickObject</A>
+COM object, and the GraphicsMagick web pages.</P>
+<PRE>    GraphicsMagick-1.0-Q8-windows-utils.exe
+    GraphicsMagick-1.0-Q16-windows-utils.exe
+</PRE><P CLASS="western">
+Note that the QuantumDepth=8 version (Q8) consumes half the memory
+and about 30% less CPU than the QuantumDepth=16 version (Q16), but
+provides less color resolution. A Q8 version is fine for processing
+typical photos. If you are dealing with scientific or medical images
+or deal with images that have limited contrast, then the Q16 version
+is recommended. It is also possible to build a Q32 version which has
+enough resolution to deal with the latest reconnaissance images.
+Please let us know if there is any demand for the Q32 versions.</P>
 <H4 CLASS="western">Start Installation Wizard 
 </H4>
 <P CLASS="western">Execute the downloaded file from your browser or
@@ -117,10 +134,10 @@ to continue.
 </P>
 <H4 CLASS="western">Select Destination Directory</H4>
 <P CLASS="western">Specify what drive and directory to install
-GraphicsMagick into. Approximately 13MB of free disk space is
+GraphicsMagick into. Approximately 14MB of free disk space is
 required to install GraphicsMagick. The default installation
 directory is similar to &ldquo;C:\Program
-Files\GraphicsMagick-1.0.0-Q16&rdquo;. Once you have entered the
+Files\GraphicsMagick-1.0-Q16&rdquo;. Once you have entered the
 desired installation directory, then select &ldquo;Next&gt;&rdquo; to
 continue. 
 </P>
@@ -131,7 +148,7 @@ satisfactory. Click on &ldquo;Next&gt;&rdquo; to continue.
 </P>
 <H4 CLASS="western">Select Additional Tasks</H4>
 <P CLASS="western">A screen is displayed which provides the option to
-create a desktop shortcut icon to the imdisplay program and to update
+create a desktop shortcut icon to the gmdisplay program and to update
 the executable search path so that GraphicsMagick is available
 without specifying the full path to the programs. The default is to
 enable both of these. Once you have made your selections, click on
@@ -159,17 +176,16 @@ GraphicsMagick.html&rdquo;. Select &ldquo;Finish&rdquo; to exit the
 installation program. <BR>Under Windows '95 and Windows '98 it will
 be necessary to reboot the system in order for some settings to take
 effect (such as executable search path) since these are set in
-autoexec.bat. 
-</P>
+autoexec.bat. Please verify that autoexec.bat is updated correctly.
+We have received some reports that the path in autoexec.bat is not
+updated correctly.</P>
 <H4 CLASS="western">Testing The Installation</H4>
 <P CLASS="western">Select &ldquo;Command Prompt&rdquo; from the
 Windows Start menu. Within the window type</P>
-<P CLASS="western" STYLE="margin-left: 0.79in"><FONT FACE="Courier New">convert
-logo: logo.miff<BR>imdisplay logo.miff</FONT></P>
+<P CLASS="western" STYLE="margin-left: 0.79in"><FONT FACE="Courier New">gm
+convert logo: logo.miff<BR>gmdisplay logo.miff</FONT></P>
 <P CLASS="western">and the GraphicsMagick logo should be displayed in
-a window. Note that NT-based Windows systems come with a program
-named 'convert' and if your path is set incorrectly, the wrong
-convert program will be executed!</P>
+a window.</P>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>
 	<COL WIDTH=256*>
 	<TR>
@@ -312,17 +328,17 @@ the list, and click on &ldquo;Change/Remove&rdquo; to uninstall it.</P>
 </TABLE>
 <P CLASS="western" STYLE="margin-bottom: 0in"><BR>
 </P>
-<P CLASS="western">The GraphicsMagick utilities (e.g. convert,
-mogrify, composite, ...) may be executed as a sub-process by other
-programs. If the utilities are not in the systems executable search
-path (they should be since the GraphicsMagick install extends the
-path), then the utility should be executed via the complete path to
-the executable. Note that systems other than Windows '9X/ME provide a
-&ldquo;convert.exe&rdquo; as part of the operating system. Care must
-be taken to avoid executing the wrong &ldquo;convert.exe&rdquo; by
-mistake.</P>
+<P CLASS="western">The GraphicsMagick gm utility may be executed as a
+sub-process by other programs. If gm utility is not in the systems
+executable search path (it should be since the GraphicsMagick install
+extends the path), then the utility should be executed via the
+complete path to the executable.</P>
+<P CLASS="western">A COM object included with the &quot;utils&quot;
+package and known as <A HREF="ImageMagickObject.html">ImageMagickObject</A>
+may be used to execute the gm subfunctions (e.g. &quot;convert&quot;)
+without spawning a new process.</P>
 <P CLASS="western">A package which is linked against the
-GraphicsMagick core DLLs may use the DLLs from an installed
+GraphicsMagick core DLLs may use the DLLs from an installed DLL-based
 GraphicsMagick, provided that the GraphicsMagick release versions are
 identical, and the value of QuantumDepth matches the value used when
 building the package. One way to ensure this is to include a matching
@@ -362,7 +378,7 @@ delivered:</P>
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=34% BGCOLOR="#e6e6e6">
-			<P CLASS="western"><FONT SIZE=3>Proprocessor Definitions</FONT></P>
+			<P CLASS="western"><FONT SIZE=3>Preprocessor Definitions</FONT></P>
 		</TD>
 		<TD WIDTH=66% BGCOLOR="#e6e6e6">
 			<P CLASS="western"><FONT SIZE=3>NDEBUG,WIN32,_CONSOLE,_VISUALC_,NeedFunctionPrototypes,_DLL,_MAGICKMOD_</FONT></P>
